methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:14: error: type mismatch;
 found   : Int(1)
 required: Boolean
move(3,1) 
       ^